//
// As reference use https://github.com/grpc/grpc-java/blob/master/examples/example-hostname/src/main/proto/helloworld/helloworld.proto
//
syntax = "proto3";

option java_package = "github.com.mstepan.grpc.examples.service.hello";

package hello;

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string  message = 1;
}